# semstrait

./: .gitignore  CONTEXT.md  Cargo.toml  MODEL.md  PLANNER.md  README.md  SPEC.md
schema/: README.md  semantic-model.json
src/: error.rs  lib.rs
src/emitter/: emit.rs  error.rs  mod.rs  sql.rs  substrait.rs
src/model/: dimension.rs  metric.rs  mod.rs  schema.rs  tablegroup.rs
src/parser/: mod.rs
src/plan/: expr.rs  mod.rs  node.rs
src/planner/: build.rs  cross.rs  error.rs  expr.rs  join.rs  mod.rs  plan.rs  table.rs  union.rs  util.rs
src/query/: mod.rs  request.rs
src/resolver/: error.rs  mod.rs  resolve.rs  types.rs
src/selector/: error.rs  mod.rs  select.rs
src/semantic_model/: column.rs  datasetgroup.rs  dimension.rs  measure.rs  metric.rs  mod.rs  schema.rs  types.rs
test_data/: iceberg_source.yaml  marketing.yaml  multi_table_join.yaml  partitioned.yaml  steelwheels.yaml
tests/: cross_datasetgroup.rs  cross_tablegroup.rs  dataset_selection.rs  denormalized.rs  joined_dimensions.rs  metrics.rs  mixed_dimensions.rs  multi_table_join.rs  partitioned_datasets.rs  table_selection.rs
tests/common/: mod.rs
tests/test_data/: cross_tablegroup.yaml  denormalized.yaml  marketing.yaml  metrics.yaml  mixed_dimensions.yaml  multi_table.yaml  star_schema.yaml
tools/semstrait_demo/: Cargo.toml  README.md  model.yaml  new_metric_example.yaml  proposed_changes.yaml
tools/semstrait_demo/src/: datafusion_execution.rs  diff_engine.rs  execution.rs  health.rs  impact_engine.rs  lineage.rs  main.rs  parquet_generation.rs  proof_pack.rs  reconcile.rs  snapshot_store.rs
